--- a/900-001_search/search.html
+++ b/900-001_search/search.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="search-option">
-            <h2>② IDまたは名前で検索</h2>
+            <h2>② 名前（ひらがな・カタカナ可）で検索</h2>
             <form id="name-search-form">
             <input type="text" id="name-input" name="name" placeholder="IDまたは名前を入力してください" required />
             <button type="submit">検索</button>
